Archive2/a5/39f8064c4a18e8/output
main.cpp:27:6: error: specializing member 'A<long int>::getX' requires 'template<>' syntax
 long A<long>::getX()
      ^
